--- a/stup/build.gradle
+++ b/stup/build.gradle
@@ -20,7 +20,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:gridlayout-v7:19.1.0'
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.android.support:support-v4:19.+'
+    compile 'com.android.support:gridlayout-v7:21.0.2'
+
+    compile 'com.android.support:support-v4:21.0.2'
 }
