--- a/stup/src/main/AndroidManifest.xml
+++ b/stup/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name="ibyscus.standup.stup.MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,11 +19,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".GameActivity"
-            android:parentActivityName=".MainActivity"
+            android:name="ibyscus.standup.stup.GameActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_game"
+            android:parentActivityName="ibyscus.standup.stup.MainActivity"
             android:theme="@style/FullscreenTheme" >
+        </activity>
+        <activity
+            android:name="ibyscus.standup.stup.MainOptions"
+            android:label="@string/title_activity_main_options"
+            android:parentActivityName="ibyscus.standup.stup.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ibyscus.standup.stup.MainActivity" />
         </activity>
     </application>
 
